@@ -1,0 +1,29 @@
+################################################
+# MOBAC system wide directory configuration
+################################################
+# Available variables:
+#
+# ${home}  
+# user home directory, e.g. /home/username/ on Linux or C:\Users\username\ on Win Vista/7
+#
+# ${mobac-prog}  
+# directory where MOBAC (or to be detailed Mobile_Atlas_Creator.jar) has been installed into
+# 
+# Notes: 
+# On Windows you have to use slashes "/" instead of back-slashes "\" e.g. C:/temp/mobac
+# Absolute pathes are also valid
+
+#Uncomment one of the following lines starting with "mobac." for redefining the directory
+
+# Directory where to save settings.xml and serach for log4j.xml
+#mobac.usersettingsdir=${home}/.mobac
+
+# Directory where to save and load atlas profiles
+#mobac.atlasprofilesdir=${home}/.mobac
+
+# Directory where to search "map packs", custom maps and beanShell map sources
+# Updated map packs are also saved into this directory overwriting old ones
+#mobac.mapsourcesdir=${mobac-prog}/mapsources
+
+# Directory where to create the cache databases of downloaded tiles
+#mobac.tilestoredir=${mobac-prog}/tilestore
